--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -123,7 +123,7 @@ section { padding: 120px 0; }
 //////////////*/
 
 #hero {
-    background-image: url(../../assets/images/portada3.jpg);
+    background-image: url(../../assets/images/30.jpg);
     background-size: cover;
     padding-top: 90px;
     min-height: 700px;
